fixes
- fix images preview not showing after using search
- fix cant use fullscreen mode when opening the video in a preview card
- fix ratio bar not showing correct details
- when video/audio is in preview mode, using `space` will now play/pause the item instead of closing the modal
- fix changing the screen size closes the preview card when fullscreen is on or media is playing
- some cleanup

--- a/src/resources/assets/sass/modules/ratio-bar.scss
+++ b/src/resources/assets/sass/modules/ratio-bar.scss
@@ -18,10 +18,11 @@
     box-shadow: none;
 
     strong {
-        display: none;
+        // display: none;
         overflow: hidden;
         text-transform: uppercase;
         text-overflow: ellipsis;
+        color: $black;
         mix-blend-mode: difference;
     }
 
